# book-of-d-to-google-sheets

./: pyproject.toml
book_of_d_to_google_sheets/: .~lock.book-of-d.docx#  book-of-d.docx  document_reader.py  google_sheets_handler.py  main.py
