[tool.poetry]
name = "book-of-d-to-google-sheets"
version = "0.1.0"
description = ""
authors = ["Thomas Knee <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-docx = "^1.1.0"
gspread = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
